--- a/.gitattributes
+++ b/.gitattributes
@@ -33,3 +33,6 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
+build/lib.linux-x86_64-cpython-310/sam2/_C.so filter=lfs diff=lfs merge=lfs -text
+build/temp.linux-x86_64-cpython-310/sam2/csrc/connected_components.o filter=lfs diff=lfs merge=lfs -text
+sam2/_C.so filter=lfs diff=lfs merge=lfs -text
