--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch
-torchvision
+torch==2.4.0
+torchvision==0.19.0
 numpy>=1.24.4
 tqdm>=4.66.1
 hydra-core>=1.3.2
@@ -7,4 +7,11 @@ iopath>=0.1.10
 pillow>=9.4.0
 matplotlib>=3.9.1
 opencv-python>=4.7.0
-moviepy
+moviepy==1.0.3
+imageio>=2.5.0 
+decorator>=4.3.0 
+Pillow>=7.0.0 
+scipy>=1.3.0 
+pydub>=0.23.0 
+audiofile>=0.0.0 
+gradio==4.13.0
